--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           var search = $('#search').val();
           var regex = new RegExp(search, 'i');
           var output;
-          $each(data, function(key, val){
+          $.each(data, function(key, val){
             if((val.word.search(regex) != -1) || (val.description.search(regex) != -1)) {
               output += "<tr>";
-              output += "<td id='"+key+"'>"+val.word+"<td>";
-              output += "<td id='"+key+"'>"+val.description+"<td>";
+              output += "<td id='"+key+"'>"+val.word+"</td>";
+              output += "<td id='"+key+"'>"+val.description+"</td>";
               output += "</tr>";
             }
           });
