--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <div class="container">
       <input type="search" class="form-control" id="search"/><br/>
       <table class="table table-striped table-bordered table-hover">
@@ -41,6 +40,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
       $('#search').keydown(function(){
+        console.info("keydown");
         $.getJSON("data.json",function(data){
           var search = $('#search').val();
           var regex = new RegExp(search, 'i');
