--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
           var search = $('#search').val();
           var regex = new RegExp(search, 'i');
           var output;
-          var counter = 100;
           $.each(data, function(key, val){
-            if(val.word.search(regex) != -1 && counter > 0) {
+            if(val.word.search(regex) != -1) {
               output += "<tr>";
               output += "<td id='"+key+"'>"+val.word+"</td>";
               output += "</tr>";
-              counter -= 1;
             }
           });
           $('tbody').html(output);
