--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   <body>
     <div class="container">
       <input type="search" class="form-control" id="search"/><br/>
+      <div class="btn-toolbar" role="toolbar" aria-label="...">
+        <div class="btn-group" role="group" aria-label="...">...</div>
+        <div class="btn-group" role="group" aria-label="...">...</div>
+        <div class="btn-group" role="group" aria-label="...">...</div>
+      </div>      
+
       <table class="table table-striped table-bordered table-hover">
         <tbody>
-
         </tbody>
-
-        
       </table>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
