--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
     <div class="container">
       <input type="search" class="form-control" id="search"/><br/>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
-        <div class="btn-group" role="group" aria-label="...">...</div>
-        <div class="btn-group" role="group" aria-label="...">...</div>
-        <div class="btn-group" role="group" aria-label="...">...</div>
+        <div class="btn-group" role="group" aria-label="vocals">
+          <button type="button" class="btn btn-default">ɛ</button>
+          <button type="button" class="btn btn-default">ɔ</button>
+          <button type="button" class="btn btn-default">ə</button>
+        </div>
+          
+        <div class="btn-group" role="group" aria-label="oclusives">
+          <button type="button" class="btn btn-default">β</button>
+          <button type="button" class="btn btn-default">ð</button>
+          <button type="button" class="btn btn-default">ɣ</button>
+          <button type="button" class="btn btn-default">ʃ</button>
+          <button type="button" class="btn btn-default">ʒ</button>
+          <button type="button" class="btn btn-default">g</button>
+        </div>
       </div>      
+
 
       <table class="table table-striped table-bordered table-hover">
         <tbody>
