--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <input type="search" class="form-control" id="search"/><br/>
+      <input type="search" class="form-control" id="search"/>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
         <div class="btn-group" role="group" aria-label="vocals">
           <button type="button" class="btn btn-default">ɛ</button>
