updated to less consuming

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
   </head>
   <body>
     <div class="container">
-      <input type="search" class="form-control" id="search"/>
+      <div class="input-group">
+        <input type="text" id="search"  class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button id="#bsearch" class="btn btn-secondary" type="button">Cerca</button>
+        </span>
+      </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
         <div class="btn-group" role="group" aria-label="vocals">
           <button type="button" class="btn btn-default">ɛ</button>
