--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
       <div class="input-group">
         <input type="text" id="search"  class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-          <button id="#bsearch" class="btn btn-secondary" type="button">Cerca</button>
+          <button id="bsearch" class="btn btn-secondary" type="button">Cerca</button>
         </span>
       </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
         <div class="btn-group" role="group" aria-label="vocals">
-          <button type="button" class="btn btn-default">ɛ</button>
-          <button type="button" class="btn btn-default">ɔ</button>
-          <button type="button" class="btn btn-default">ə</button>
+          <button type="letter" class="btn btn-default">ɛ</button>
+          <button type="letter" class="btn btn-default">ɔ</button>
+          <button type="letter" class="btn btn-default">ə</button>
         </div>
           
         <div class="btn-group" role="group" aria-label="oclusives">
-          <button type="button" class="btn btn-default">β</button>
-          <button type="button" class="btn btn-default">ð</button>
-          <button type="button" class="btn btn-default">ɣ</button>
-          <button type="button" class="btn btn-default">ʃ</button>
-          <button type="button" class="btn btn-default">ʒ</button>
-          <button type="button" class="btn btn-default">g</button>
+          <button type="letter" class="btn btn-default">β</button>
+          <button type="letter" class="btn btn-default">ð</button>
+          <button type="letter" class="btn btn-default">ɣ</button>
+          <button type="letter" class="btn btn-default">ʃ</button>
+          <button type="letter" class="btn btn-default">ʒ</button>
+          <button type="letter" class="btn btn-default">g</button>
         </div>
       </div>      
 
