--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="input-group">
         <input type="text" id="search"  class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-          <button id="bsearch" class="btn btn-secondary" type="button">Cerca</button>
+          <button id="bsearch" data-loading-text="Loading..." class="btn btn-secondary" type="button">Cerca</button>
         </span>
       </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
