--- a/index.html
+++ b/index.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Diccionari Fonètic Català</title>
-
-    <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
+     <div class="title"> Diccionari Fonètic Català</div>  
+     <!--h1>Diccionari Fonètic Català</h1-->
       <div class="input-group">
-        <input type="text" id="search"  class="form-control" placeholder="Search for...">
+        <input type="text" id="search"  class="form-control" placeholder="Cerca...">
         <span class="input-group-btn">
           <button id="bsearch" data-loading-text="Loading..." class="btn btn-secondary" type="button">Cerca</button>
         </span>
       </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
-        <div class="btn-group" role="group" aria-label="vocals">
+        <!--<div class="btn-group" role="group" aria-label="vocals"-->
           <button type="letter" class="btn btn-default">ɛ</button>
           <button type="letter" class="btn btn-default">ɔ</button>
           <button type="letter" class="btn btn-default">ə</button>
-        </div>
-          
-        <div class="btn-group" role="group" aria-label="oclusives">
+        <!--/div-->
+
+        <!--div class="btn-group" role="group" aria-label="oclusives"-->
           <button type="letter" class="btn btn-default">β</button>
           <button type="letter" class="btn btn-default">ð</button>
           <button type="letter" class="btn btn-default">ɣ</button>
           <button type="letter" class="btn btn-default">ʃ</button>
           <button type="letter" class="btn btn-default">ʒ</button>
           <button type="letter" class="btn btn-default">g</button>
-        </div>
-      </div>      
+        <!--/div-->
+      </div>
+    </div>
 
-      <br/>
+    <div class="results">
       <table class="table table-striped table-bordered table-hover">
         <tbody>
         </tbody>
       </table>
-
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
