--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   </head>
   <body>
     <div class="container">
+           <div class="title"> Diccionari Fonètic Català</div>  
+
       <div class="input-group">
         <input type="text" id="search"  class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
