--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <button id="bsearch" data-loading-text="Loading..." class="btn btn-secondary" type="button">Cerca</button>
         </span>
       </div>
-      <div class="btn-toolbar" role="toolbar" aria-label="...">
+      <!--div class="btn-toolbar" role="toolbar" aria-label="..."-->
         <div class="btn-group" role="group" aria-label="vocals">
           <button type="letter" class="btn btn-default">ɛ</button>
           <button type="letter" class="btn btn-default">ɔ</button>
           <button type="letter" class="btn btn-default">ə</button>
         </div>
           
-        <div class="btn-group" role="group" aria-label="oclusives">
+        <!--div class="btn-group" role="group" aria-label="oclusives"-->
           <button type="letter" class="btn btn-default">β</button>
           <button type="letter" class="btn btn-default">ð</button>
           <button type="letter" class="btn btn-default">ɣ</button>
