--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </span>
       </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
+      <div class="btn-group">
         <!--<div class="btn-group" role="group" aria-label="vocals"-->
           <button type="letter" class="btn btn-default">ɛ</button>
           <button type="letter" class="btn btn-default">ɔ</button>
@@ -35,6 +36,8 @@
           <button type="letter" class="btn btn-default">ʒ</button>
           <button type="letter" class="btn btn-default">g</button>
         <!--/div-->
+        
+       <div> 
       </div>
     </div>
 
