--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
      <div class="title"> Diccionari Fonètic Català</div>  
      <!--h1>Diccionari Fonètic Català</h1-->
       <div class="input-group">
-        <input type="text" id="search"  class="form-control" placeholder="Cerca...">
+        <input type="text" id="search"  class="form-control" placeholder="Cerca..." onkeydown="key_down()">
+        
         <span class="input-group-btn">
           <button id="bsearch" data-loading-text="Loading..." class="btn btn-secondary" type="button">Cerca</button>
         </span>
