removed search button and keydown function

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
      <div class="title"> Diccionari Fonètic Català</div>  
      <!--h1>Diccionari Fonètic Català</h1-->
       <div class="input-group">
-        <input type="text" id="search"  class="form-control" placeholder="Cerca..." onkeydown="key_down()">
-        
-        <span class="input-group-btn">
-          <button id="bsearch" data-loading-text="Loading..." class="btn btn-secondary" type="button">Cerca</button>
-        </span>
+        <input type="text" id="search"  class="form-control" placeholder="Cerca...">
       </div>
       <div class="btn-toolbar" role="toolbar" aria-label="...">
       <div class="btn-group">
